<resources>
    <string name="app_name">YoYoMarket</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="location">东南大学九龙湖校区</string>

    <string name="my_orders">我的订单</string>
    <string name="personal_setting">个人设置</string>
    <string name="logout">登出</string>

    <string name="change_password">修改密码</string>
    <string name="my_get_good_address">我的收货地址</string>
    <string name="feedback">意见反馈</string>
    <string name="service_phone">客服电话</string>
    <string name="common_problems">常见问题</string>
    <string name="about_us">关于我们</string>
    <string name="select_avatar">选择头像</string>
    <string name="take_photo">拍摄照片</string>
    <string name="select_image">相册选择</string>
    <string name="in_upload_image">上传图片中...</string>
    <string name="upload_image_fail">上传图片失败...</string>
    <string name="upload_image_success">图片上传成功!</string>
    <string name="in_create_address">创建地址中...</string>
    <string name="in_modify_address">修改地址中...</string>
    <string name="create_address_success">地址创建成功!</string>
    <string name="modify_address_success">地址修改成功!</string>
    <string name="create_address_fail">创建地址失败~</string>
    <string name="modify_address_fail">修改地址失败~</string>
    <string name="address_remind">请检查您输入的地址，手机号,姓名~</string>
    <string name="feedback_submitting">意见提交中...</string>
    <string name="feedback_content_length_remind">反馈内容不能少于6个字~</string>
    <string name="plz_enter_contact_info">请填写您的联系方式~</string>
    <string name="submit_success">提交成功！</string>
    <string name="submit_error">提交失败~</string>

    <string name="phone_login">手机快捷登录</string>
    <string name="normal_login">普通登录</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_hint">请输入您的手机号</string>
    <string name="code_hint">请输入您的验证码</string>
    <string name="pwd_hint">请输入您的密码</string>
    <string name="login">登录</string>
    <string name="find_psw">找回密码</string>
    <string name="register">注册</string>

    <string name="input_phone_num">输入手机号</string>
    <string name="input_code">输入验证码</string>
    <string name="set_pwd">设置密码</string>
    <string name="read_protocol">我已阅读并接受</string>
    <string name="user_protocol">用户协议</string>
    <string name="submit_code">提交验证码</string>
    <string name="input_pwd_again">请再次输入您的密码</string>
    <string name="two_pwd_different">两次输入不一致</string>
    <string name="confirm">确定</string>
    <string name="enter_new_pwd_hint">请输入您的新密码</string>
    <string name="confirm_new_pwd_hint">请再次输入您的新密码</string>
    <string name="chang_pwd">修改密码</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="phone_already_register">手机已被注册</string>
    <string name="pwd_length_less">密码不能少于7位</string>
    <string name="register_success">注册成功~</string>
    <string name="in_login">登录中...</string>
    <string name="login_success">登录成功！</string>
    <string name="login_enter_remind">请正确输入您的账号密码~</string>
    <string name="code_login_enter_remind">请正确输入您的账号验证码~</string>
    <string name="modify_pwd_enter_remind">请正确输入您的账号验证码以及密码~</string>
    <string name="in_modify">修改中...</string>
    <string name="modify_pwd_success">修改密码成功！</string>
    <string name="two_pwd_different1">两次密码输入不一致~</string>

    <string name="get_good_info">收货信息</string>
    <string name="add_get_good_info">添加收货人信息</string>
    <string name="modify_address">修改地址</string>
    <string name="add_address">添加地址</string>
    <string name="address">地址:</string>
    <string name="phone">电话:</string>
    <string name="sex">身份:</string>
    <string name="boy">男生</string>
    <string name="gril">女生</string>
    <string name="name">姓名:</string>
    <string name="delete_address">删除地址</string>
    <string name="confirm_delete_address">确定要删除该地址吗?</string>
    <string name="delete_address_failed">地址删除失败~</string>
    <string name="delete_address_success">地址删除成功!</string>
    <string name="in_delete_address">删除地址中...</string>
    
    <string name="feedback_hint">请在这里写下您的感受，我们将不断进步，做得更好~</string>
    <string name="contact_way">联系方式:</string>
    <string name="contact_way_hint">邮箱/手机</string>
    <string name="submit">提交</string>

    <string name="pick_finish">选好啦</string>
    <string name="search_in_shop">输入商品名称，进行店内搜索</string>
    <string name="shop_announcement">商家公告</string>
    <string name="send_good_time">送货时间:</string>
    <string name="start_send_time">起送时间:</string>
    <string name="start_send_price">起送价格:</string>
    <string name="shop_address">超市地址:</string>
    <string name="check_comment">查看评价</string>
    <string name="shop_info">超市详情</string>
    <string name="all_comments">所有评价</string>
    <string name="clean_cart">清空购物车</string>
    <string name="sale_count_rank">销量排行</string>
    <string name="search">搜索</string>

    <string name="order_pay_remain">距离支付结束还剩14分35秒</string>
    <string name="go_pay">去支付</string>
    <string name="pay_way">支付方式:</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="deliver_time">送达时间:</string>
    <string name="remark">备注:</string>
    <string name="total">合计:</string>
    <string name="pick_address">选择地址</string>
    <string name="in_create_order">创建订单中...</string>
    <string name="create_order_fail">创建订单失败~</string>
    <string name="create_order_success">创建订单成功!</string>
    <string name="plz_pick_address_and_time">请选择地址及送达时间~</string>
    <string name="plz_pick_address">请选择地址~</string>
    <string name="plz_pick_time">请选择送达时间~</string>
    <string name="pick_time">选择送达时间</string>
    <string name="submit_order">提交订单</string>
    
    <string name="order_already_submit">您的订单已提交,请等待超市接单</string>
    <string name="market_already_received_order">超市已接单，货物正在路上</string>
    <string name="already_got_good">您已收货,记得评价哟</string>
    <string name="already_commit">您已评价订单</string>
    <string name="in_refund">您的订单正在退款中</string>
    <string name="already_refund">您的订单已退款</string>
    <string name="not_pay_yet">您的订单还没有付款,快去付款吧</string>
    <string name="order_finish1">您的订单已完成</string>
    <string name="order_submit">订单提交</string>
    <string name="market_receive_order">超市接单</string>
    <string name="receive_good">已收货</string>
    <string name="commented">已评价</string>
    <string name="go_pay_order">去付款</string>
    <string name="cancel_order">取消订单</string>
    <string name="go_comment">去评价</string>
    <string name="order_info">订单详情</string>
    <string name="receive_address">收货地址:</string>
    <string name="phone_num">手机号码:</string>
    <string name="order_id">订单号:</string>
    <string name="order_time">下单时间:</string>
    <string name="receive_people">收货人:</string>
    <string name="order_in_refund">退款中</string>
    <string name="order_cancel">订单取消</string>
    <string name="order_wait_pay">待付款</string>
    <string name="order_wait_receive">待接单</string>
    <string name="order_receive">商家已接单</string>
    <string name="order_wait_comment">待评价</string>
    <string name="order_finish">订单完成</string>
    <string name="cancel_order_before_receive_confirm">确定取消订单吗？</string>
    <string name="cancel_order_after_receive_confirm">商家已接单，要取消订单需与商家协商，要打电话给商家吗？</string>
    <string name="in_order_cancel">订单取消中...</string>
    <string name="order_cancel_failed">订单取消失败~</string>
    <string name="order_cancel_success">订单取消成功!</string>

    <string name="tab_markets">markets</string>
    <string name="tab_orders">orders</string>
    <string name="tab_mine">mine</string>

    <string name="loading">加载中...</string>
    <string name="net_error">数据获取失败，请检查网络</string>
    <string name="retry">重新加载</string>
    <string name="net_cant_use">当前网络不可用，请检查您的网络</string>
    <string name="empty_data">还没有添加数据</string>
</resources>
